--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nodemailer": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
