--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.10.0",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.525.0",
     "nodemailer": "^7.0.5",
     "react": "^18.2.0",
