--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,41 +1,78 @@
 {
+  "name": "PlexiSystem",
   "short_name": "PlexiSystem",
-  "name": "PlexiSystem - System Ofertowania",
-  "description": "Profesjonalny system zarządzania ofertami i klientami",
-  "icons": [
-    {
-      "src": "/logo192.png",
-      "type": "image/png",
-      "sizes": "192x192",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/logo512.png",
-      "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "any maskable"
-    }
-  ],
-  "start_url": "/",
-  "display": "standalone",
+  "description": "System zarządzania ofertami i ekspozytorami z plexi",
   "theme_color": "#f97316",
   "background_color": "#18181b",
-  "orientation": "portrait-primary",
+  "display": "standalone",
+  "orientation": "portrait",
+  "scope": "/",
+  "start_url": "/",
+  "icons": [
+    {
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable any"
+    }
+  ],
   "categories": ["business", "productivity"],
   "shortcuts": [
     {
       "name": "Nowa oferta",
-      "short_name": "Oferta",
-      "description": "Utwórz nową ofertę",
+      "short_name": "Nowa",
+      "description": "Stwórz nową ofertę",
       "url": "/offer/new",
-      "icons": [{ "src": "/logo192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/icons/new-offer.png", "sizes": "96x96" }]
     },
     {
-      "name": "Dashboard",
-      "short_name": "Dashboard",
-      "description": "Zobacz statystyki",
-      "url": "/dashboard",
-      "icons": [{ "src": "/logo192.png", "sizes": "192x192" }]
+      "name": "Lista ofert",
+      "short_name": "Oferty",
+      "description": "Zobacz wszystkie oferty",
+      "url": "/",
+      "icons": [{ "src": "/icons/offers.png", "sizes": "96x96" }]
     }
   ]
 }
