Fix: Naprawienie błędów kompilacji i PWA
- Poprawiona ścieżka do main.tsx w index.html
- Tymczasowo wyłączony Service Worker
- Uproszczony manifest.json
- Naprawione ścieżki do ikon
- Dodany brakujący tag mobile-web-app-capable

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,69 +10,17 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-192x192.png",
+      "src": "/logo192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
+      "src": "/logo512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable any"
     }
   ],
-  "categories": ["business", "productivity"],
-  "shortcuts": [
-    {
-      "name": "Nowa oferta",
-      "short_name": "Nowa",
-      "description": "Stwórz nową ofertę",
-      "url": "/offer/new",
-      "icons": [{ "src": "/icons/new-offer.png", "sizes": "96x96" }]
-    },
-    {
-      "name": "Lista ofert",
-      "short_name": "Oferty",
-      "description": "Zobacz wszystkie oferty",
-      "url": "/",
-      "icons": [{ "src": "/icons/offers.png", "sizes": "96x96" }]
-    }
-  ]
+  "categories": ["business", "productivity"]
 }
