--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,26 +1,37 @@
 {
-  "name": "PlexiSystem",
+  "name": "PlexiSystem - System zarządzania ofertami",
   "short_name": "PlexiSystem",
-  "description": "System zarządzania ofertami i ekspozytorami z plexi",
-  "theme_color": "#f97316",
-  "background_color": "#18181b",
-  "display": "standalone",
-  "orientation": "portrait",
-  "scope": "/",
+  "description": "Profesjonalny system do zarządzania ofertami i klientami dla branży pleksi",
   "start_url": "/",
+  "display": "standalone",
+  "background_color": "#18181b",
+  "theme_color": "#8b5cf6",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "/logo192.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any maskable"
     },
     {
-      "src": "/logo512.png",
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any maskable"
     }
   ],
-  "categories": ["business", "productivity"]
+  "categories": ["business", "productivity"],
+  "screenshots": [
+    {
+      "src": "/screenshot1.png",
+      "sizes": "1280x720",
+      "type": "image/png"
+    },
+    {
+      "src": "/screenshot2.png",
+      "sizes": "1280x720",
+      "type": "image/png"
+    }
+  ]
 }
