Add AI product descriptions and sheet cutting optimizer
- Added AI-powered product description generator using OpenAI API
- Implemented sheet cutting optimization algorithm with visualization
- Created Production page with cutting optimizer tool
- Added ProductDescription component for Calculator
- Updated routing to include /production page
- Added VITE_OPENAI_API_KEY to .env.example

Features:
1. Generate professional product descriptions with AI
2. Optimize material usage with cutting algorithm
3. Visual cutting plan with downloadable images
4. Production queue management interface

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ VITE_APP_VERSION=1.0.0
 VITE_ENABLE_PDF_GENERATION=true
 VITE_ENABLE_EMAIL_SENDING=true
 
+# AI Settings
+VITE_OPENAI_API_KEY=your_openai_api_key_here
+
 # Company Info
 VITE_COMPANY_NAME="PlexiSystem S.C."
 VITE_COMPANY_NIP=5882396272
