--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@supabase/supabase-js": "^2.39.3",
-    "@react-three/fiber": "^8.15.0",
-    "@react-three/drei": "^9.88.0",
-    "three": "^0.158.0",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.6",
     "jspdf": "^2.5.1",
@@ -23,7 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "recharts": "^3.1.0"
+    "recharts": "^3.1.0",
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
