--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@supabase/supabase-js": "^2.39.3",
+    "@types/jspdf": "^1.3.3",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.6",
-    "jspdf": "^2.5.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.525.0",
     "nodemailer": "^7.0.5",
     "react": "^18.2.0",
