--- a/plexisystem-backend/.env.example
+++ b/plexisystem-backend/.env.example
@@ -1,22 +1,19 @@
+# Backend Environment Variables
+
 # Port
 PORT=3001
 
-# Frontend URL (dla CORS)
-BASE_URL=https://plexisystem.vercel.app
+# Database
+DATABASE_PATH=./plexisystem.db
 
-# Database (dla Render użyj /var/data)
-DATABASE_PATH=/var/data/plexisystem.db
-
-# Email Configuration
+# SMTP Configuration
 SMTP_HOST=s44.cyber-folks.pl
 SMTP_PORT=465
 SMTP_USER=oferty@plexisystem.pl
-SMTP_PASS=your_password_here
+SMTP_PASS=your_smtp_password_here
 
-# External APIs (opcjonalne)
-NIP24_API_KEY=
-GUS_WEBHOOK_URL=
-OPENAI_API_KEY=
+# Frontend URL (for CORS)
+BASE_URL=https://plexisystem.vercel.app
 
-# Environment
+# Node Environment
 NODE_ENV=production
