--- a/plexisystem-backend/.gitignore
+++ b/plexisystem-backend/.gitignore
@@ -1,1 +1,35 @@
+# Dependencies
+node_modules/
+
+# Environment variables
 .env
+.env.local
+.env.production
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# OS Files
+.DS_Store
+Thumbs.db
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Build
+dist/
+build/
+
+# Temporary files
+tmp/
+temp/
